--- a/backend/src/Makefile
+++ b/backend/src/Makefile
@@ -1,7 +1,9 @@
 
-all:
-	gcc main.c logistic-regression.c matrix-op.c -o out.exe -lm
+genlib:
+	gcc -c -fPIC *.c
+	gcc -shared -o lrlib.so *.o
 
 clean:
 	rm -rf *.exe
 	rm -rf *.o
+	rm -rf *.so
